    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_data_grid"
    tools:context=".DataGridActivity">

    <!-- Goal Weight Section -->
    <TextView
        android:id="@+id/goalWeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_weight_label"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- TextView to Display the Current Goal Weight -->
    <TextView
        android:id="@+id/currentGoalWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_goal_weight_default"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/goalWeightLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- EditText for Entering New Goal Weight -->
    <EditText
        android:id="@+id/goalWeightInput"
        android:background="@drawable/edit_text_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_goal"
        android:inputType="numberDecimal"
        android:autofillHints="weight"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/currentGoalWeightText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/setGoalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_goal_button"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_orange"
        app:layout_constraintTop_toBottomOf="@id/goalWeightInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <!-- Current Weight Section -->
    <TextView
        android:id="@+id/currentWeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_weight_label"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/setGoalButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- TextView to Display the Latest Weight -->
    <TextView
        android:id="@+id/todaysWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todays_weight_default"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/currentWeightLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- EditText for Entering Current Weight -->
    <EditText
        android:id="@+id/currentWeightInput"
        android:background="@drawable/edit_text_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_todays_weight"
        android:inputType="numberDecimal"
        android:autofillHints="weight"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/todaysWeightText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/addDailyWeightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_daily_weight_button"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_orange"
        app:layout_constraintTop_toBottomOf="@id/currentWeightInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <!-- RecyclerView for Data Grid -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dataGridRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/addDailyWeightButton"
        app:layout_constraintBottom_toTopOf="@id/smsPermissionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_data_grid" />


        <!-- Enable View Trend Button -->
        <Button
            android:id="@+id/trendGraphButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_orange"
            android:contentDescription="@string/Trend_Graph"
            android:padding="8dp"
            android:text="Trend Graph"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.214"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Enable SMS Notifications Button -->
        <Button
            android:id="@+id/smsPermissionButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_orange"
            android:contentDescription="@string/sms_permission_request_description"
            android:padding="8dp"
            android:text="@string/sms_permission_button"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.795"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>